# mutiagent-researcher

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  简历.md  简历项目总结.md  面试准备-实现细节.md
config/: agents.yaml  research.yaml
docs/: architecture.html  architecture.md  changelog.html  changelog.md  implementation.md  resume-project-summary.md  resume.md  tools.html  tools.md
src/: __init__.py  main.py
src/_framework/: ATTRIBUTION.md  __init__.py  agent_base.py  exceptions.py  mcp.py  react.py  schema.py  terminate.py  tool_base.py  tool_collection.py  toolcall.py
src/agents/: __init__.py  llm_adapter.py  specialized.py
src/graph/: nodes.py  state.py  workflow.py
src/llm/: __init__.py  config.py
src/memory/: __init__.py  long_term.py  memory.py
src/tools/: __init__.py  analysis.py  base.py  export.py  mcp_server.py  search.py
src/tools/analysis/: mcp_server.py  tools.py
src/tools/export/: mcp_server.py  tools.py
src/tools/mcp/: __init__.py  manager.py
src/tools/search/: mcp_server.py  tools.py
src/utils/: __init__.py  progress.py
