[project]
name = "multi-agent-research"
version = "0.1.0"
description = "Multi-agent research assistant with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangGraph (orchestration)
    "langgraph>=1.2,<2",
    "langgraph-checkpoint-sqlite>=3.1,<4",
    "langgraph-checkpoint>=4.1,<5",
    "langgraph-prebuilt>=1.1,<2",
    "langchain-core>=1.4,<2",
    # Vendored framework (src/_framework/)
    "openai>=1.109,<2",
    "pydantic>=2.10,<3",
    "tenacity>=9.0,<10",
    "pyyaml>=6.0,<7",
    "loguru>=0.7,<1",
    # LLM providers (native SDKs)
    "anthropic>=0.105,<1",
    "httpx>=0.28,<1",
    "python-dotenv>=1.2,<2",
    # Research tools
    "arxiv>=3.0,<4",
    "wikipedia>=1.4,<2",
    # MCP (Model Context Protocol)
    "mcp>=1.9,<2",
    "fastmcp>=2.9,<3",
    # CLI & UI
    "rich>=15.0,<16",
    "typer>=0.26,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
